# archsoft-training-code

./: .gitignore  README.md
annotation-1/: README.md
annotation-2/: README.md  pom.xml
annotation-3/: README.md  pom.xml
annotation-4/: pom.xml
annotation-5/: README.md
annotation-6/: README.md  pom.xml
annotation-8/: pom.xml
coll-1/: pom.xml
coll-2/: README.md  pom.xml
coll-3/: README.md
coll-4/: README.md
coll-5/: pom.xml
coll-6/: README.md
coll-7/: README.md
decorator-1/: pom.xml
enum-1/: pom.xml
enum-2/: README.md
exception-1/: README.md  pom.xml
exception-2/: pom.xml
exception-3/: pom.xml
exception-4/: README.md
excercises/: README.md  pom.xml
extras/JNI/stat/: CMakeLists.txt  collector.cpp  com_archsoft_StatisticCollector.h  cpu_usage.h  library.h  processes.h
format-datetime/: README.md  pom.xml
format-number/: README.md  pom.xml
hello-world/: pom.xml
io-1/: README.md  pom.xml
io-2/: README.md
io-3/: pom.xml
io-5/: README.md
io-6/: README.md  pom.xml
io-7/: README.md
jpa-0/: README.md  pom.xml
jpa-1/: README.md
jpa-10/: pom.xml
jpa-2/: pom.xml
jpa-5/: pom.xml
jpa-6/: README.md  pom.xml
jpa-7/: README.md
jpa-8/: pom.xml
jpa-9/: README.md
jpa-default-mappings-1/: pom.xml
jpa-default-mappings-2/: README.md  pom.xml
jpa-default-mappings-4/: pom.xml
jpa-default-mappings-6/: README.md  pom.xml
lambda-1/: pom.xml
lambda-2/: README.md
lista1-10/: pom.xml
lista1-13/: pom.xml
lista1-16/: pom.xml
lista1-5/: pom.xml
lista1-8/: pom.xml
module-1/: clear.sh
module-2/: clear.sh
(+2042 files in other folders)
